Project

General

Profile

Actions

Bug #52852

closed

[pwl] C_WriteSameRequest number_log_entries is not reset from 0

Added by Ilya Dryomov over 2 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Related issues 1 (0 open1 closed)

Copied to rbd - Backport #52882: pacific: [pwl] C_WriteSameRequest number_log_entries is not reset from 0ResolvedDeepika UpadhyayActions
Actions #1

Updated by Ilya Dryomov over 2 years ago

  • Subject changed from [pwl] C_WriteSameRequest number_log_entries is not reset 0 to [pwl] C_WriteSameRequest number_log_entries is not reset from 0
Actions #2

Updated by Ilya Dryomov over 2 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot over 2 years ago

  • Copied to Backport #52882: pacific: [pwl] C_WriteSameRequest number_log_entries is not reset from 0 added
Actions #4

Updated by Ilya Dryomov over 2 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF